# multi-agent-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_queries.json
data/finance_docs/: expense_policy.md  invoice_processing.md  payroll_information.md  purchasing_guidelines.md  travel_reimbursement.md
data/hr_docs/: benefits.md  employee_onboarding.md  performance_review.md  remote_work_policy.md  vacation_policy.md
data/tech_docs/: email_reset.md  laptop_replacement.md  software_installation.md  vpn_access.md
src/: multi_agent_system.py
src/agents/: __init__.py  base_rag_agent.py  evaluator.py  finance_agent.py  hr_agent.py  orchestrator.py  tech_agent.py
src/utils/: __init__.py  logger.py  spinner.py
